<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_6"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rec"
    >

    <View
        android:id="@+id/some_id"
        android:layout_width="425dp"
        android:layout_height="215dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/scr" />

    <TextView
        android:id="@+id/maths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="270dp"
        android:gravity="top"
        android:text="@string/exs"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/group_10"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/fix" />

    <TextView
        android:id="@+id/memory"
        android:layout_width="86dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="350dp"
        android:gravity="top"
        android:text="@string/memory"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/group_11"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/bra" />

    <TextView
        android:id="@+id/sequence"
        android:layout_width="240dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="430dp"
        android:gravity="top"
        android:text="@string/sequence"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/group_12"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/tri" />

    <TextView
        android:id="@+id/repeat"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="510dp"
        android:gravity="top"
        android:text="@string/repeat"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/group_13"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/repeat_pass" />

    <TextView
        android:id="@+id/repeat_music"
        android:layout_width="242dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="590dp"
        android:gravity="top"
        android:text="@string/repeat_music"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/group_14"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/repeat_music" />

    <TextView
        android:id="@+id/check"
        android:layout_width="275dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="670dp"
        android:gravity="top"
        android:text="@string/check"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/group_15"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="660dp"
        android:background="@drawable/a"
         />
</RelativeLayout>