<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_6"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/rec"
    >

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/white" />


    <TextView
        android:id="@+id/time"
        android:layout_width="189dp"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="64dp"
        android:gravity="top"
        android:text="0:00 AM"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000" />


    <View
        android:id="@+id/rectangle_3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="223dp"
        android:background="@drawable/cube" />

    <TextView
        android:id="@+id/repeat_223"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="221dp"
        android:gravity="top"
        android:text="@string/repeat_223"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="208dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/cube" />

    <TextView
        android:id="@+id/vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="241dp"
        android:layout_marginTop="221dp"
        android:gravity="top"
        android:text="@string/vibration"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <View
        android:id="@+id/ellipse_17"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse"
        />

    <View
        android:id="@+id/ellipse_11"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse"
        />

    <View
        android:id="@+id/ellipse_12"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse"
    />

    <View
        android:id="@+id/ellipse_18"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="185dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse"
        />

    <View
        android:id="@+id/ellipse_19"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse" />

    <View
        android:id="@+id/ellipse_20"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse" />

    <View
        android:id="@+id/ellipse_21"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="350dp"
        android:layout_marginTop="283dp"
        android:background="@drawable/ellipse" />

    <TextView
        android:id="@+id/day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="288dp"
        android:gravity="center_vertical"
        android:text="@string/day1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="288dp"
        android:gravity="center_vertical"
        android:text="@string/day2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="288dp"
        android:gravity="top"
        android:text="@string/day3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="193dp"
        android:layout_marginTop="288dp"
        android:gravity="top"
        android:text="@string/day4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/day5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="247dp"
        android:layout_marginTop="288dp"
        android:gravity="top"
        android:text="@string/day5"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/day6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="302dp"
        android:layout_marginTop="288dp"
        android:gravity="top"
        android:text="@string/day6"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/day7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="358dp"
        android:layout_marginTop="288dp"
        android:gravity="top"
        android:text="@string/day7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <View
        android:id="@+id/ellipse_4"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="355dp"
        android:background="@drawable/ellipse"
        />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="436dp"
        android:background="@drawable/ellipse"
        />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="517dp"
        android:background="@drawable/ellipse"
        />

    <TextView
        android:id="@+id/ima21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="367dp"
        android:gravity="top"
        android:text="Выбор мелодии звонка"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="453dp"
        android:gravity="top"
        android:text="Головоломки"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/qr_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="534dp"
        android:gravity="top"
        android:text="QR код"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        />

    <View
        android:id="@+id/unnamed_rem"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="367dp"
        android:background="@drawable/nota" />

    <View
        android:id="@+id/puzz"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="445dp"
        android:background="@drawable/puzz"
        />

    <View
        android:id="@+id/kisspng_qr_"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="522dp"
        android:background="@drawable/qqkod"
        />

</RelativeLayout>